- Android  * Added example showing how to use Bitmap images

--- a/integration/boofcv-android/examples/video/app/src/main/res/layout/main.xml
+++ b/integration/boofcv-android/examples/video/app/src/main/res/layout/main.xml
@@ -22,5 +22,11 @@
 		android:text="QR Code"
 		android:onClick="clickedQrCode"
 		android:id="@+id/button_qrcode"/>
+	<Button
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:text="Bitmap Image"
+		android:onClick="clickedBitmap"
+		android:id="@+id/button_open_image"/>
 </LinearLayout>
 
